--- a/responsive.css
+++ b/responsive.css
@@ -77,8 +77,8 @@
 
   .explanations {
     flex-direction: column;
-    max-width: 100vw;
-    margin: 60px 100px;
+    max-width: 100%;
+    margin: 60px 10px 60px 30px;
     gap: 10px;
   }
 
@@ -108,6 +108,8 @@
 
   .warnings {
     flex-direction: column;
+    max-width: 100vw;
+    margin: 60px 100px 100px 100px;
   }
 
   .warning1 {
@@ -117,7 +119,7 @@
 
   .closingLine {
     flex-direction: column;
-    max-width: 80%;
+    max-width: 90%;
     margin-bottom: 50px;
   }
 }
